Changes for 1.5
* Making some small fixes to annotation test, and renaming any methods with attatch to attach. (veqryn)

* Added wait window to TripleA's startup. (frigoref)

* Changed name of Dynamix to be Land-Only AI, at least until someone decides to start working on the AI again. (veqryn)

* Completely updated the game xml exporter to TripleA 1.5, except that attachments are just copies of what was parsed from the xml originally. (veqryn)

* Fixed null pointer error in Bid Placement when undoing a placement. (veqryn)

* Created new Player Attachment property, stackingLimit, which allows stacking limits to be enforced flexibly per player, with multiple rules allowed for owned, allied, and total units. (veqryn)

* Created new Rules Attachment property, players, which can be used with directOwnershipTerritories, directExclusionTerritories, directPresenceTerritories, or any of the other territory lists, to customize which players are required to own/occupy the territories. (veqryn)

* Fixing new attachment setter annotation tester, and renaming some isXX methods to getXX. (veqryn)

* Fixing a unit test by removing static instances from messenger classes. (qwertgold)

* Adding @InternalDoNotExport or @GameProperty onto all setter methods in all attachments, and also unit and tripleaunit. (veqryn)

* Creating annotations to be used for tracking and marking various setters for attachments and other game data. (qwertgold & veqryn)

* Changing how attachments are created by the game parser. (frigoref & veqryn)

* Changing build.xml and editing a test suite to ignore certain tests for the time being.  Also setting svn to ignore 'classes.jar', 'fb.xml', and 'TEST-games.strategy.AllTests.txt/xml'. (qwertgold)

* Adding findbugs folder for use with ANT. (qwertgold)
